# GameReplicationDemo

./: CMakeLists.txt  main.cpp
GameObject/: SimpleObject.h
Netwrok/Socket/: Connection.cpp  Connection.h
Netwrok/Stream/: InputStream.cpp  InputStream.h  OutputStream.cpp  OutputStream.h
